--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -14,10 +14,10 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #81B4DA;
+  background-color: #81b4da;
   border: none;
 }
 
 .activeDot {
-  background-color: #3C5186;
+  background-color: #3c5186;
 }
