--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,5 +4,5 @@
   align-items: center;
   justify-content: space-between;
   gap: 16px;
-  box-shadow: 0px 2px 30px 0px #81B4DA33;
+  box-shadow: 0 2px 30px 0 #81b4da33;
 }
