--- a/src/components/NavItem/NavItem.module.css
+++ b/src/components/NavItem/NavItem.module.css
@@ -1,8 +1,8 @@
 .navLink {
   position: relative;
   line-height: 20px;
-  letter-spacing: 0px;
-  color: #334B5D;
+  letter-spacing: 0;
+  color: #334b5d;
   text-decoration: none;
 }
 
@@ -10,14 +10,14 @@
   position: absolute;
   bottom: -3px;
   left: 0;
-  content: "";
+  content: '';
   display: inline-block;
   width: 100%;
   height: 1px;
-  background-color: #334B5D;
+  background-color: #334b5d;
   transform: scaleX(0);
   opacity: 0;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   transform-origin: left center;
 }
 
