--- a/src/components/Slide/Slide.module.css
+++ b/src/components/Slide/Slide.module.css
@@ -20,15 +20,15 @@
   margin-top: 120px;
   font-size: 46px;
   line-height: 54px;
-  letter-spacing: 0px;
-  color: #3E3E3E;
+  letter-spacing: 0;
+  color: #3e3e3e;
 }
 
 .subtitle {
   margin-top: 15px;
   font-size: 22px;
   line-height: 34px;
-  letter-spacing: 0px;
+  letter-spacing: 0;
   color: #000;
 }
 
@@ -38,23 +38,21 @@
   width: max-content;
   border-radius: 20px;
   padding: 9px 50px;
-  background-color: #E39F12;
-  color: #FFFFFF;
-
+  background-color: #e39f12;
+  color: #fff;
   font-size: 16px;
   line-height: 22px;
-  letter-spacing: 0px;
+  letter-spacing: 0;
   text-align: center;
   text-decoration: none;
-
   transition: all 0.3s ease;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 12px rgb(0 0 0 / 15%);
   transform: translateY(0);
 }
 
 .learnMore:hover {
   background-color: #cf8d0e;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 6px 18px rgb(0 0 0 / 25%);
   transform: translateY(-2px) scale(1.02);
 }
 
@@ -88,7 +86,7 @@
   opacity: 1;
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   .slideImg {
     flex: 1 1 auto;
     min-width: 50%;
@@ -101,8 +99,7 @@
   }
 }
 
-
-@media (min-width: 1200px) {
+@media (width >= 1200px) {
   .slide {
     min-height: 620px;
   }
